--- a/application/package.json
+++ b/application/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "my-app",
+  "name": "application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "core-js": "^3.3.2",
     "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-localize-redux": "^3.5.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
@@ -27,10 +29,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-dom": "^16.10.2",
-    "react-localize-redux": "^3.5.3",
-    "react-router-dom": "^5.1.2"
   }
 }
