--- a/application/package.json
+++ b/application/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-localize-redux": "^3.5.3",
+    "react-popper": "^1.3.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
